updated 20 files based on client conversation 8/23

--- a/cargo-services.html
+++ b/cargo-services.html
@@ -136,7 +136,7 @@
                     <p>Ask mission control about how you can simplify your air transport needs with our door-to-door
                         ground-handling services.</p>
                     <div class="pt-2 link-container">
-                        <a href="/contact.html">Click here to discuss your next mission</a>
+                        <a href="/contact.html" class="btn btn-outline-primary">Click here to discuss your next mission</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
