--- a/rac90-planes.html
+++ b/rac90-planes.html
@@ -77,6 +77,7 @@
             </div>
             <div class="card bg-gray my-5 py-4 text-center shadow">
                 <div class="card-body">
+                    <h3 class="pb-3">The first cargo plane built by cargo operators</h3>
                     <div class="row">
                         <div class="col-md-3">
                             <i class="fas fa-tachometer-alt icon-big"></i>
@@ -115,7 +116,7 @@
                 <div class="col-lg-6">
                     <h4>Operation Rosebud</h4>
                     <p>What happens when a team of engineers from NASA, Lockheed Martin, and General Dynamics
-                        come together to create a new aircraft faster than a Cessna and more efficient than a Poladis?
+                        come together to create a new aircraft faster than a Cessna Cargomaster and more efficient than a Pilatus PC-12?
                         The answer is Operation Rosebud: our secret mission to create a new standard for air utility.
                     </p>
                     <div class="pt-2 link-container">
@@ -132,7 +133,7 @@
     <section class="section-shipping my-5 py-5">
         <div class="container">
             <h2>Upgrade your fleet today</h2>
-            <p class="text-center lead">If you fly passengers or air cargo, the RAC90 can help you meet all mission objectives.</p>
+            <p class="text-center lead">If you fly air cargo, the RAC90 can help you meet all your mission objectives.</p>
             <div class="container pt-5">
                 <div class="row justify-content-around">
                     <div class="card-transparent col-lg-3">
@@ -160,7 +161,7 @@
             </div>
 
             <div class="container pt-4 text-center">
-                <a href="#" class="btn btn-primary">Call Now</a>
+                <a href="/contact.html" class="btn btn-primary">Call Now</a>
             </div>
         </div>
     </section>
