--- a/special-missions.html
+++ b/special-missions.html
@@ -119,9 +119,7 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-6">
                     <h4>Your best line of defense</h4>
-                    <p>In an emergency, seconds can make the difference between mission success and failure &mdash; or
-                        even between life and death. When the stakes are high, it's critical you have a team specialized
-                        in solving high-pressure missions with the ultimate discretion. Our team has decades of
+                    <p>In an emergency, seconds can make the difference. Our team has decades of
                         military, law enforcement, and aviation experience providing secure transportation almost
                         anywhere in the world.</p>
                 </div>
