--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
             <h2>Meet the Team</h2>
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-6 portrait text-center">
-                    <img src="resources/imgs/portrait.jpg" class="gallery">
+                    <img src="resources/imgs/andy_downs.jpg" class="gallery">
                 </div>
                 <div class="col-lg-6 text-center">
                     <h3>Andy Downs</h3>
@@ -83,12 +83,12 @@
             </div>
             <div class="row align-items-center justify-content-between my-3">
                 <div class="col-lg-6 portrait text-center">
-                    <img src="resources/imgs/portrait.jpg" class="gallery">
+                    <img src="resources/imgs/tom_murphy.JPG" class="gallery">
                         <h3>Tom Murphy</h3>
                         <h4 class="sub-head">Chief Technician</h4>
                 </div>
                 <div class="col-lg-6 portrait text-center my-3">
-                    <img src="resources/imgs/portrait.jpg" class="gallery">
+                    <img src="resources/imgs/judd_cowan.JPG" class="gallery">
                     <h3>Judd Cowan</h3>
                     <h4 class="sub-head">Chief Engineer</h4>
                 </div>
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="col span-3-of-3">
                     <p class="longCopy">
-                        At Resource Air Charter, we believe in one simple, old-fashioned American value: that if you want to
+                        At Resource Air Charter, we believe in one simple American value: that if you want to
                         be the best, you need to get there first with the most. That's why we're proud to provide you with
                         24/7 rapid response air charter services to get your freight where it needs to be, exactly when you
                         need it. No surprises. No exceptions. Guaranteed.
