--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="row">
             <div class="col span-3-of-3">
                 <p class="longCopy">
-                    At Resource Air Charter, we believe in one simple, old-fashioned American value: that if you want to
+                    At Resource Air Charter, we believe in one simple American value: that if you want to
                     be the best, you need to get there first with the most. That's why we're proud to provide you with
                     24/7 rapid response air charter services to get your freight where it needs to be, exactly when you
                     need it. No surprises. No exceptions. Guaranteed.
