--- a/rac90-planes.html
+++ b/rac90-planes.html
@@ -63,17 +63,15 @@
                     <img class="img-fluid rounded mb-4 mb-lg-0 border shadow" src="resources/imgs/RAC90-demo.jpg"
                         alt="">
                 </div>
-                <!-- /.col-lg-8 -->
                 <div class="col-lg-5 rounded border p-3 bg-offwhite">
                     <h1 class="alt-h1 text-center">Discover The <span class="emphasis">RAC90</span></h1>
                     <p>Introducing the new, best tool in air utility. With cutting-edge engineering and efficiency, the
                         RAC90 offers unparalleled cargo transportation capabilities for individuals and fleets.</p>
                     <div class="container py-4 text-center">
                         <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
-                        <a href="/construction.html" class="btn btn-outline-primary">Learn More</a>
+                        <!-- <a href="/construction.html" class="btn btn-outline-primary">Learn More</a> -->
                     </div>
                 </div>
-                <!-- /.col-md-4 -->
             </div>
             <div class="card bg-gray my-5 py-4 text-center shadow">
                 <div class="card-body">
@@ -120,7 +118,7 @@
                         The answer is Operation Rosebud: our secret mission to create a new standard for air utility.
                     </p>
                     <div class="pt-2 link-container">
-                        <a href="/construction.html">Click here to read more about Operation Rosebud.</a>
+                        <!-- <a href="/construction.html">Click here to read more about Operation Rosebud.</a> -->
                     </div>
                 </div>
                 <div class="d-none d-lg-block col-lg-4">
@@ -135,25 +133,35 @@
             <h2>Upgrade your fleet today</h2>
             <p class="text-center lead">If you fly air cargo, the RAC90 can help you meet all your mission objectives.</p>
             <div class="container pt-5">
-                <div class="row justify-content-around">
-                    <div class="card-transparent col-lg-3">
-                        <img src="resources/imgs/5.jpg" class="card-img-top rounded" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Efficiency</h5>
-                            <p class="card-text">Lower operating costs with the most fuel-efficient cargo plane on the market.</p>
+                <div class="row justify-content-around align-items-center py-4">
+                    <div class="card-transparent col-lg-4">
+                        <img src="resources/imgs/5.jpg" class="gallery rounded" alt="...">
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="">
+                            <h5 class="card-title emphasis">Efficiency</h5>
+                            <p class="card-text">Time in the air means burning fuel and money. Lower your operating costs with the most fuel-efficient cargo plane on the market.</p>
                         </div>
                     </div>
-                    <div class="card-transparent col-lg-3">
-                        <img src="resources/imgs/5.jpg" class="card-img-top rounded" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Speed</h5>
-                            <p class="card-text">The RAC90's top speed will get you to your destination faster than any other cargo plane in its category.</p>
+                </div>
+                <div class="row justify-content-around align-items-center py-4">
+                    <div class="col-lg-5">
+                        <div class="">
+                            <h5 class="card-title emphasis">Speed</h5>
+                            <p class="card-text">When you need cargo delivered ASAP, you can be confident the RAC90's top speed will get you to your destination faster than any other cargo plane in its category.</p>
                         </div>
                     </div>
-                    <div class="card-transparent col-lg-3">
-                        <img src="resources/imgs/5.jpg" class="card-img-top rounded" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Innovation</h5>
+                    <div class="card-transparent col-lg-4">
+                        <img src="resources/imgs/plane-ground.jpg" class="gallery rounded" alt="...">
+                    </div>
+                </div>    
+                <div class="row justify-content-around align-items-center py-4">
+                    <div class="card-transparent col-lg-4">
+                        <img src="resources/imgs/cockpit-2.jpg" class="gallery rounded" alt="...">
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="">
+                            <h5 class="card-title emphasis">Innovation</h5>
                             <p class="card-text">Designed by a team from NASA, Lockheed Martin, and General Dynamics to be the new best utility aircraft in existence.</p>
                         </div>
                     </div>
