--- a/about.html
+++ b/about.html
@@ -69,6 +69,29 @@
         </div>
     </section>
 
+    <section id="section-story" class="my-5 py-5">
+        <div class="container">
+            <h2>Our Story</h2>
+            <div class="row">
+                <div class="col span-3-of-3">
+                    <p class="longCopy">
+                        At Resource Air Charter, we believe in one simple American value: that if you want to
+                        be the best, you need to get there first with the most. That's why we're proud to provide you with
+                        24/7 rapid response air charter services to get your freight where it needs to be, exactly when you
+                        need it. No surprises. No exceptions. Guaranteed.
+                    </p>
+                    <br>
+                    <p class="longCopy">
+                        From the second you call, the race begins and it's not over until your shipment arrives safely and
+                        securely at its destination. When minutes can make the difference for mission success, trust our
+                        team to get you there.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
     <section id="section-team" class="section-team my-5 pb-5">
         <div class="container">
             <h2>Meet the Team</h2>
@@ -104,29 +127,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <section id="section-story" class="section-story my-5 py-5">
-        <div class="container">
-            <h2>Our Story</h2>
-            <div class="row">
-                <div class="col span-3-of-3">
-                    <p class="longCopy">
-                        At Resource Air Charter, we believe in one simple American value: that if you want to
-                        be the best, you need to get there first with the most. That's why we're proud to provide you with
-                        24/7 rapid response air charter services to get your freight where it needs to be, exactly when you
-                        need it. No surprises. No exceptions. Guaranteed.
-                    </p>
-                    <br>
-                    <p class="longCopy">
-                        From the second you call, the race begins and it's not over until your shipment arrives safely and
-                        securely at its destination. When minutes can make the difference for mission success, trust our
-                        team to get you there.
-                    </p>
-                </div>
-            </div>
-        </div>
-
     </section>
 
 <!-- FOOTER -->
