--- a/cargo-services.html
+++ b/cargo-services.html
@@ -127,7 +127,7 @@
         </div>
     </section>
 
-    <section id="section-shipping" class="section-shipping my-5 py-5">
+    <section id="section-shipping" class="bg-gray my-5 py-5">
         <div class="container">
             <h2>Dedicated supply chain solutions</h2>
             <div class="row align-items-center justify-content-between">
