--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-lg main-nav fixed-top navbar-light">
 
-        <a class="navbar-brand" href="index.html"><img class="navbar-logo" src="resources/imgs/RAC logo.jpg"
+        <a class="navbar-brand" href="index.html"><img class="navbar-logo" src="resources/imgs/logo_alt.png"
                 alt="Resource Air Charter Logo"></a>
         <ul class="navbar-nav mr-auto">
 
