--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <a class="navbar-brand" href="index.html"
         ><img
           class="navbar-logo"
-          src="resources/imgs/RAC logo.jpg"
+          src="resources/imgs/logo_alt.png"
           alt="Resource Air Charter Logo"
       /></a>
 
