--- a/cargo-services.html
+++ b/cargo-services.html
@@ -121,7 +121,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="resources/imgs/1.jpg" class="gallery rounded shadow">
+                    <img src="resources/imgs/247.jpg" class="gallery rounded shadow">
                 </div>
             </div>
         </div>
@@ -131,6 +131,9 @@
         <div class="container">
             <h2>Dedicated supply chain solutions</h2>
             <div class="row align-items-center justify-content-between">
+                    <div class="col-lg-6 text-center">
+                            <img src="resources/imgs/loading.jpg" class="gallery rounded shadow">
+                        </div>
                 <div class="col-lg-6">
                     <h4>Are you a logistics manager?</h4>
                     <p>Ask mission control about how you can simplify your air transport needs with our door-to-door
@@ -139,9 +142,7 @@
                         <a href="/contact.html" class="btn btn-outline-primary">Click here to discuss your next mission</a>
                     </div>
                 </div>
-                <div class="col-lg-6 text-center">
-                    <img src="resources/imgs/warehouse.jpg" class="gallery rounded shadow">
-                </div>
+
             </div>
         </div>
     </section>
