--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="container pt-5">
                 <h1 class="display-4">Air Cargo<br>
                     On Demand</h1>
-                <p class="text-white about-lead">We help businesses avoid downtime and save millions of dollars with exclusive rapid response
+                <p class="text-white lead">We help businesses avoid downtime and save millions of dollars with exclusive rapid response
                     air charter services.</p>
                 <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
                 <a href="/cargo-services.html" class="btn btn-outline-primary">Learn More</a>
@@ -238,22 +238,21 @@
     <section class="section-aboutus py-5">
         <div class="container">
             <h2>About Us</h2>
-        <div class="row">
-            <div class="col span-3-of-3">
-                <p class="longCopy">
-                    At Resource Air Charter, we believe in one simple American value: that if you want to
-                    be the best, you need to get there first with the most. That's why we're proud to provide you with
-                    24/7 rapid response air charter services to get your freight where it needs to be, exactly when you
-                    need it. No surprises. No exceptions. Guaranteed.
-                </p>
-                <br>
-                <p class="longCopy">
-                    From the second you call, the race begins and it's not over until your shipment arrives safely and
-                    securely at its destination. When minutes can make the difference for mission success, trust our
-                    team to get you there.
-                </p>
+            <div class="row">
+                <div>
+                    <p class="longCopy">
+                        At Resource Air Charter, we believe in one simple American value: you need to get there first with the most. That's why we're proud to provide you with
+                        24/7 rapid response air charter services to get your freight where it needs to be, exactly when you
+                        need it. We adapt and overcome any surprises to accomplish your mission. No exceptions. Guaranteed.
+                    </p>
+                    <br>
+                    <p class="longCopy">
+                        From the second you call, the race begins and it's not over until your shipment arrives safely and
+                        securely at its destination. When minutes can make the difference for mission success, trust our
+                        team to get you there.
+                    </p>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
