--- a/rac90-planes.html
+++ b/rac90-planes.html
@@ -102,6 +102,7 @@
                             </div>
                         </div>
                     </div>
+                    <p class="smol-disclaimer">*Performance and results may vary based on King Air model.</p>
                 </div>
             </div>
         </div>
@@ -113,8 +114,8 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-lg-6">
                     <h4>Operation Rosebud</h4>
-                    <p>What happens when a team of engineers from NASA, Lockheed Martin, and General Dynamics
-                        come together to create a new aircraft faster than a Cessna Cargomaster and more efficient than a Pilatus PC-12?
+                    <p>What happens when a team of engineers previously at NASA, Lockheed Martin, and General Dynamics
+                        come together to consult and help create a new aircraft faster than a Cessna Cargomaster and more efficient than a Pilatus PC-12?
                         The answer is Operation Rosebud: our secret mission to create a new standard for air utility.
                     </p>
                     <div class="pt-2 link-container">
@@ -162,7 +163,7 @@
                     <div class="col-lg-5">
                         <div class="">
                             <h5 class="card-title emphasis">Innovation</h5>
-                            <p class="card-text">Designed by a team from NASA, Lockheed Martin, and General Dynamics to be the new best utility aircraft in existence.</p>
+                            <p class="card-text">Designed with consulting by a team of former NASA, Lockheed Martin, and General Dynamics engineers to be the new best utility aircraft in existence.</p>
                         </div>
                     </div>
                 </div>
@@ -284,6 +285,7 @@
                                 <i class="fab fa-linkedin-in linkedin"></i>
                             </a>
                         </li>
+                    </ul>
                 </div>
             </div>
             <div class="row align-items-center pt-3">
