--- a/careers.html
+++ b/careers.html
@@ -238,6 +238,16 @@
                 >
               </li>
             </ul>
+            <p class="footer-text">
+              Hangar 10, Inc d/b/a Resource Air Charter per FAA Certificate
+              #LFBA048G
+            </p>
+            <p class="footer-text">
+              50 South Amelia Earheart Drive Brownsville, TX 78521
+            </p>
+            <p class="footer-text">
+              Production Manufacturers Authority PQ04405CE
+            </p>
           </div>
           <div class="col-md-4">
             <h5>Links</h5>
