--- a/cargo-services.html
+++ b/cargo-services.html
@@ -296,7 +296,13 @@
                         <li><a href="tel:1-615-278-9450" class="footer-text">Call: (615) 278-9450</a></li>
                         <li><a href="emailto:dispatch@resourceaircharter.com"
                                 class="footer-text">dispatch@resourceaircharter.com</a></li>
-                    </ul>    
+                    </ul>
+                    <p class="footer-text">Hangar 10, Inc d/b/a Resource Air Charter per FAA Certificate #LFBA048G</p>
+                    <p class="footer-text">50 South Amelia Earheart Drive
+                        Brownsville, TX 78521
+                    </p>
+                    <p class="footer-text">Production Manufacturers Authority PQ04405CE
+                    </p>    
                 </div>
                 <div class="col-md-4">
                     <h5>Links</h5>
