--- a/special-missions.html
+++ b/special-missions.html
@@ -277,6 +277,12 @@
                         <li><a href="emailto:dispatch@resourceaircharter.com"
                                 class="footer-text">dispatch@resourceaircharter.com</a></li>
                     </ul>
+                    <p class="footer-text">Hangar 10, Inc d/b/a Resource Air Charter per FAA Certificate #LFBA048G</p>
+                    <p class="footer-text">50 South Amelia Earheart Drive
+                        Brownsville, TX 78521
+                    </p>
+                    <p class="footer-text">Production Manufacturers Authority PQ04405CE
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <h5>Links</h5>
