rac90 & accessbility changes

--- a/about.html
+++ b/about.html
@@ -128,7 +128,11 @@
         <h2>Meet the Team</h2>
         <div class="row align-items-center justify-content-between">
           <div class="col-lg-6 portrait text-center">
-            <img src="resources/imgs/andy_downs.jpg" class="gallery" />
+            <img
+              src="resources/imgs/andy_downs.jpg"
+              alt="Andy Downs"
+              class="gallery"
+            />
           </div>
           <div class="col-lg-6 text-center">
             <h3>Andy Downs</h3>
@@ -136,23 +140,39 @@
           </div>
         </div>
         <div class="row align-items-center justify-content-between my-3">
+          <div class="col-lg-6 portrait text-center my-3">
+            <img
+              src="resources/imgs/James-300_250-300x250.jpg"
+              alt="James Matthews"
+              class="gallery"
+            />
+            <h3>James Matthews</h3>
+            <h4 class="sub-head">Managing Partner</h4>
+          </div>
           <div class="col-lg-6 portrait text-center">
-            <img src="resources/imgs/tom_murphy.JPG" class="gallery" />
+            <img
+              src="resources/imgs/tom_murphy.JPG"
+              alt="Tom Murphy"
+              class="gallery"
+            />
             <h3>Tom Murphy</h3>
             <h4 class="sub-head">Director of Maintenance</h4>
           </div>
           <div class="col-lg-6 portrait text-center my-3">
-            <img src="resources/imgs/judd_cowan.JPG" class="gallery" />
+            <img
+              src="resources/imgs/judd_cowan.JPG"
+              alt="Judd Cowan"
+              class="gallery"
+            />
             <h3>Judd Cowan</h3>
             <h4 class="sub-head">Chief Engineer</h4>
           </div>
-          <div class="col-lg-6 portrait text-center my-3">
-            <img src="resources/imgs/portrait.jpg" class="gallery" />
-            <h3>Mike Tucker</h3>
-            <h4 class="sub-head">Engineer</h4>
-          </div>
           <div class="col-lg-6 portrait text-center">
-            <img src="resources/imgs/christina_england.jpg" class="gallery" />
+            <img
+              src="resources/imgs/christina_england.jpg"
+              alt="Christina England"
+              class="gallery"
+            />
             <h3>Christina England</h3>
             <h4 class="sub-head">Chief of Flight Operations</h4>
           </div>
