--- a/cargo-services.html
+++ b/cargo-services.html
@@ -121,7 +121,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img src="resources/imgs/247.jpg" class="gallery rounded shadow">
+                    <img src="resources/imgs/247.jpg" alt="plane pulling in for loading" class="gallery rounded shadow">
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
             <h2>Dedicated supply chain solutions</h2>
             <div class="row align-items-center justify-content-between">
                     <div class="col-lg-6 text-center">
-                            <img src="resources/imgs/loading.jpg" class="gallery rounded shadow">
+                            <img src="resources/imgs/loading.jpg" alt="men loading cargo on plane" class="gallery rounded shadow">
                         </div>
                 <div class="col-lg-6">
                     <h4>Are you a logistics manager?</h4>
