--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <footer class="page-footer pt-4">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <h5>Information</h5>
                     <p class="footer-text">Resource Air Charter</p>
                     <p class="footer-text">691 Fitzhugh Blvd
@@ -332,6 +332,8 @@
                         Brownsville, TX 78521
                     </p>
                     <p class="footer-text">Production Manufacturers Authority PQ04405CE
+                    </p>
+                    <p class="footer-text">All air charters not flown by RAC are arranged with FAA approved 135 and 121 carriers.
                     </p>
                 </div>
                 <div class="col-md-4">
