--- a/rac90-planes.html
+++ b/rac90-planes.html
@@ -60,8 +60,8 @@
         <div class="container">
             <div class="row align-items-center my-5">
                 <div class="col-lg-7">
-                    <img class="img-fluid rounded mb-4 mb-lg-0 border shadow" src="resources/imgs/RAC90-demo.jpg"
-                        alt="">
+                    <img class="img-fluid rounded mb-4 mb-lg-0 border shadow" src="resources/imgs/IMG_4906.jpg"
+                        alt="RAC 90 Plane in hangar">
                 </div>
                 <div class="col-lg-5 rounded border p-3 bg-offwhite">
                     <h1 class="alt-h1 text-center">Discover The <span class="emphasis">RAC90</span></h1>
@@ -69,7 +69,7 @@
                         RAC90 offers unparalleled cargo transportation capabilities for individuals and fleets.</p>
                     <div class="container py-4 text-center">
                         <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
-                        <!-- <a href="/construction.html" class="btn btn-outline-primary">Learn More</a> -->
+                        <a href="/resources/imgs/RAC90 Infographic.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -86,44 +86,23 @@
                         <div class="col-md-3">
                             <i class="fas fa-globe-americas icon-big"></i>
                             <div class="pt-2">
-                            <h3 class="sub-head">1,000 nm range</h3>
+                            <h3 class="sub-head">1,200 nm range</h3>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <i class="fas fa-weight-hanging icon-big"></i>
                             <div class="pt-2">
-                            <h3 class="sub-head">4,200 kg payload</h3>
+                            <h3 class="sub-head">4,500 lbs useful load</h3>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <i class="fas fa-plane-departure icon-big"></i>
                             <div class="pt-2">
-                            <h3 class="sub-head">2,150 m takeoff</h3>
+                            <h3 class="sub-head">3,500 ft takeoff</h3>
                             </div>
                         </div>
                     </div>
                     <p class="smol-disclaimer">*Performance and results may vary based on King Air model.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="section-shipping" class="section-content my-5 py-5">
-        <div class="container">
-            <h2>Imagination, Innovation, Aviation</h2>
-            <div class="row align-items-center justify-content-between">
-                <div class="col-lg-6">
-                    <h4>Operation Rosebud</h4>
-                    <p>What happens when a team of engineers previously at NASA, Lockheed Martin, and General Dynamics
-                        come together to consult and help create a new aircraft faster than a Cessna Cargomaster and more efficient than a Pilatus PC-12?
-                        The answer is Operation Rosebud: our secret mission to create a new standard for air utility.
-                    </p>
-                    <div class="pt-2 link-container">
-                        <!-- <a href="/construction.html">Click here to read more about Operation Rosebud.</a> -->
-                    </div>
-                </div>
-                <div class="d-none d-lg-block col-lg-4">
-                    <img src="resources/imgs/4.jpg" class="gallery justify-content-center rounded shadow">
                 </div>
             </div>
         </div>
@@ -136,7 +115,7 @@
             <div class="container pt-5">
                 <div class="row justify-content-around align-items-center py-4">
                     <div class="card-transparent col-lg-4">
-                        <img src="resources/imgs/5.jpg" class="gallery rounded" alt="...">
+                        <img src="resources/imgs/5.jpg" class="gallery rounded" alt="wheel">
                     </div>
                     <div class="col-lg-5">
                         <div class="">
@@ -153,12 +132,12 @@
                         </div>
                     </div>
                     <div class="card-transparent col-lg-4">
-                        <img src="resources/imgs/plane-ground.jpg" class="gallery rounded" alt="...">
+                        <img src="resources/imgs/plane-ground.jpg" class="gallery rounded" alt="nose of plane">
                     </div>
                 </div>    
                 <div class="row justify-content-around align-items-center py-4">
                     <div class="card-transparent col-lg-4">
-                        <img src="resources/imgs/cockpit-2.jpg" class="gallery rounded" alt="...">
+                        <img src="resources/imgs/cockpit-2.jpg" class="gallery rounded" alt="plane cockpit">
                     </div>
                     <div class="col-lg-5">
                         <div class="">
