--- a/special-missions.html
+++ b/special-missions.html
@@ -124,7 +124,7 @@
                         anywhere in the world.</p>
                 </div>
                 <div class="col-lg-4">
-                    <img src="resources/imgs/puerto_rico_2.jpg" class="gallery justify-content-center rounded shadow">
+                    <img src="resources/imgs/puerto_rico_2.jpg" alt="unloading supplies in Puerto Rico" class="gallery justify-content-center rounded shadow">
                 </div>
             </div>
         </div>
@@ -185,7 +185,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 text-center">
-                    <img src="resources/imgs/Major_General_Gary_Harrell.jpg" class="border rounded portrait-testimonial">
+                    <img src="resources/imgs/Major_General_Gary_Harrell.jpg" alt="Gary Harrell" class="border rounded portrait-testimonial">
                 </div>
                 <div class="col-lg-6">
                     <h2>The Harrell Group</h2>
